@@ -7,7 +7,7 @@
     <parent>
         <groupId>gr2338</groupId>
         <artifactId>vendmachtrack</artifactId>
-        <version>1.0</version>
+        <version>3.0</version>
     </parent>
 
     <properties>
@@ -84,6 +84,24 @@
 
     <build>
         <plugins>
+
+
+            <!-- SureFire plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>
+                        ${argLine} --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED  <!-- for JavaFX Testing -->
+                    </argLine>
+                    <reportsDirectory>
+                        ${testResultsDir}/junit/${project.artifactId}
+                    </reportsDirectory>
+                </configuration>
+
+            </plugin>
+
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
